2011-05-24  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (SUBDIR_MAKEFILES_IN): New variable.
	(SUBDIR_MAKEFILES): Derive from $SUBDIR_MAKEFILES_IN.
	(Makefile): Use $SUBDIR_MAKEFILES_IN.

2011-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/verify.h: Merge from gnulib.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/intprops.h, lib/stdint.in.h, m4/mktime.m4, m4/readlink.m4:
	Merge from gnulib.

2011-05-21  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (AUTOMAKE_INPUTS): Add $(srcdir)/lib/gnulib.mk.

2011-05-20  Eli Zaretskii  <eliz@gnu.org>

	* .bzrignore: Add lib/stdio.in-h, lib/stdbool.h, and lib/stdint.h.

	* config.bat: Concatenate lisp.mk onto the end of src/Makefile.

2011-05-20  Glenn Morris  <rgm@gnu.org>

	* configure.in (lisp_frag): New output file.

2011-05-19  Glenn Morris  <rgm@gnu.org>

	* configure.in (NS_SUPPORT, MOUSE_SUPPORT, TOOLTIP_SUPPORT)
	(WINDOW_SUPPORT): Remove output variables that are no longer used.

2011-05-17  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/gnulib.mk:
	* lib/intprops.h:
	* lib/unistd.in.h:
	* m4/inttypes.m4:
	* m4/stdint.m4:
	* m4/unistd_h.m4: Sync from gnulib.

2011-05-14  Glenn Morris  <rgm@gnu.org>

	* configure.in: Treat failure to find an X toolkit the same way we treat
	failure to find X and image support.

2011-05-12  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (src, install-arch-indep, bootstrap-clean)
	(check-declare): Shell portability fixes.  (Bug#8642)

2011-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* configure.in: Require GnuTLS 2.6.x or higher.

2011-05-06  Paul Eggert  <eggert@cs.ucla.edu>

	Use C99's va_copy to avoid undefined behavior on x86-64 GNU/Linux.
	* Makefile.in (GNULIB_MODULES): Add stdarg, for va_copy.
	* lib/stdarg.in.h, m4/stdarg.m4: New files, from gnulib.

	* Makefile.in (GNULIB_TOOL_FLAG): Add --conditional-dependencies.
	This new gnulib-tool option saves 'configure' the trouble of
	checking for strtoull when strtoumax exists.
